# hybrid-multiobjective-autonlp

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  user_input_module.py  worker.py
automl/: __init__.py  bayesian_optimization.py  evaluator.py  genetic_algorithm.py  hybrid_automl.py  interpretability.py  persistence.py  search_engine.py
backend/: README.md  main.py  pyproject.toml
backend/api/: ablation_worker.py  db.py  job_manager.py  server.py  worker.py  worker_fn.py
backend/api/core/: config.py  lifespan.py
backend/api/models/: ablation.py  feedback.py  job.py
backend/api/routes/: ablations.py  feedback.py  jobs.py
backend/api/services/: ablation_service.py  analytics_service.py  job_service.py
backend/api/workers/: job_manager.py  paths.py  worker.py
backend/automl/: __init__.py  bayesian_optimization.py  evaluator.py  hybrid_automl.py  interpretability.py  pareto.py  persistence.py  pipeline_builder.py  search_engine.py
backend/experiments/: __init__.py  evaluation.py  run_ablations.py
backend/utils/: __init__.py  data_loader.py  evaluation.py  job_manager.py  logger.py  serialization.py
experiments/: __init__.py  baselines.py  evaluation.py  run_ablations.py  run_baselines.py
frontend/: .prettierrc  README.md  app.py  app1.py  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
modules/: data.py  experiments.py  visuals.py
scripts/: tpot_baseline.py
ui/: __init__.py  layout.py  visuals.py
utils/: data_loader.py  formatting.py  job_manager.py  (+2 more)
(+82 files in other folders)
