[project]
name = "t-autonlp"
version = "0.1.0"
description = "Human-centered, multi-objective AutoML for NLP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "deap>=1.4.3",
    "lightgbm>=4.6.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "streamlit>=1.52.2",
]
